Update content and fix spacing on hero title

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@media screen and (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+}
 body {
   @apply font-body;
   -webkit-font-smoothing: antialiased;
